Добавил купоны облигаций, цены облигаций через номинал и разбивку доходности в прогнозе
- Номинал и НКД облигаций с биржи (FACEVALUE, ACCRUEDINT), миграции 014–016; единое правило пересчёта котировки в рубли (BondPricing) для портфеля, графиков, прогноза, страницы бумаги и подстановки цены в диалог сделки, в том числе для облигации, которой ещё нет в базе.
- Купоны из Т-Инвестиций (GetBondCoupons) в таблице выплат с видом COUPON; поле kind во всех ответах с выплатами, подписи «купон» на фронтенде; окно синхронизации выплат расширено до шести лет.
- Прогноз: выплаты после НДФЛ, среднее за пять полных календарных лет, покрытых историей цен; рост цены за 10 лет; выплаты и годы до дробления или обратного дробления не учитываются; двойник выплаты MOEX рядом со строкой Т-Инвестиций считается один раз; облигация без загруженных купонов помечается.
- Ответ прогноза дополнен ростом цен, выплатами и разбивкой по бумагам; новая карточка «Из чего сложилась доходность» и подпись плитки доходности, на десктопе и на телефоне.
- Страница облигации: подпись «с НКД» и предупреждение о непринятом номинале.